@@ -1,3 +1,9 @@
+2010-03-21 CHEN Yangyang <skabyy@gmail.com>
+
+    * Show the time left while detecting server in "quick setup".
+    * Improve the "check for update" functionality.
+      Make this functionality available in Fedora, Ubuntu and Mint.
+
 2010-03-19 Homer Xing <homer.xing@gmail.com>
 
     * Merge menubar and toolbar. 
